<resources>
    <string name="app_name">Photon</string>

    <!-- Fonts -->
    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_condensed">sans-serif-condensed</string>
    <string name="roboto_black">sans-serif-black</string>
    <string name="roboto_thin">sans-serif-thin</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="title_1">Online gallery of food-photo</string>
    <string name="title_2">For studing</string>
    <string name="error_message">Error</string>
    <string name="menu_home">Main</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_upload">Download</string>


</resources>
