<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:theme="@style/SplashTheme"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        >


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_alignParentBottom="true"
            android:scaleType="fitCenter"
            android:src="@drawable/splash"
            />

        <TextView
            android:id="@+id/splash_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_largest_96"
            android:fontFamily="@string/roboto_medium"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/color_black"
            android:textSize="@dimen/text_40sp"
            />

        <TextView
            android:id="@+id/splash_title_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/splash_title"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:fontFamily="@string/roboto_light"
            android:text="@string/title_1"
            android:textAlignment="center"
            android:textColor="@color/color_gray"
            android:textSize="@dimen/text_20sp"
            />

        <TextView
            android:id="@+id/splash_title_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/splash_title_1"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:fontFamily="@string/roboto_light"
            android:text="@string/title_2"
            android:textAlignment="center"
            android:textColor="@color/color_gray"
            android:textSize="@dimen/text_20sp"
            />


    </RelativeLayout>

</FrameLayout>
